# mock-interview-agents

./: .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  sandbox.ipynb
backend/app/: main.py
backend/app/api/v1/routers/: doc_gen.py  test.py  vapi.py
backend/app/core/: config.py  log.py
backend/app/prompts/: doc_gen.py  prompts.py  response.md
backend/questions/: 251a9cae-b38e-49a2-a51b-9f88e79ac2da.json
backend/uploads/: 251a9cae-b38e-49a2-a51b-9f88e79ac2da.json
frontend/: .dockerignore  .gitignore  local.dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/components/: Footer.js  Layout.js  MdDisplay.js  Navbar.js
frontend/pages/: index.js  sampleData.js
frontend/pages/api/: contact.js
frontend/styles/: globals.css
nginx/: Dockerfile  nginx.conf
routers/: Makefile  docker-compose.yml
routers/backend/: Dockerfile  pyproject.toml  requirements.txt  sandbox.ipynb
routers/backend/app/api/v1/routers/: test.py
routers/backend/app/core/: log.py
